--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "nuxt",
     "build": "nuxt build --spa",
     "start": "nuxt start --spa",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate --spa",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
