--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "gsap": "^1.20.3",
     "jquery": "^3.3.1",
     "nuxt": "^1.0.0",
     "nuxt-cli": "0.0.1",
